--- a/build.gradle
+++ b/build.gradle
@@ -19,13 +19,31 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-actuator'
-	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
 	annotationProcessor 'org.projectlombok:lombok'
+
+	compileOnly 'org.projectlombok:lombok'
+
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	implementation "org.springframework.boot:spring-boot-starter-validation"
+
+	implementation "org.slf4j:slf4j-api:2.0.6"
+//	implementation "org.springframework.boot:spring-boot-starter-logging"
+	implementation "org.springframework.boot:spring-boot-starter-log4j2"
+	modules {
+		module("org.springframework.boot:spring-boot-starter-logging") {
+			replacedBy "org.springframework.boot:spring-boot-starter-log4j2", "Use Log4j2 instead of Logback"
+		}
+	}
+
+	implementation(platform("software.amazon.awssdk:bom:2.17.24"))
+	implementation("software.amazon.awssdk:s3")
+	implementation("io.findify:s3mock_2.13:0.2.6")
+
+	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
-tasks.named('test') {
-	useJUnitPlatform()
-}
+//tasks.named('test') {
+//	useJUnitPlatform()
+//}
