--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation "org.springframework.boot:spring-boot-starter-validation"
 
 	implementation "org.slf4j:slf4j-api:2.0.6"
@@ -39,7 +40,7 @@ dependencies {
 	implementation("software.amazon.awssdk:s3")
 	implementation("io.findify:s3mock_2.13:0.2.6")
 
-	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
+	implementation 'io.micrometer:micrometer-registry-prometheus'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
