--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,7 +1,3 @@
-api:
-  media:
-    maxUploadSize: 10
-
 mock-backend:
   enabled: true
   port: 8001
@@ -16,16 +12,8 @@ management:
       exposure:
         include: '*'
         exclude: env,beans
-
-
-spring:
-  datasource:
-    url: jdbc:h2:file:./data/db
-    username:
-    password:
-  h2:
-    console:
-      enabled: true
-  sql:
-    init:
-      mode: always
+  statsd:
+    metrics:
+      export:
+        enabled: false
+        host: localhost
