--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,9 +1,13 @@
+server:
+  port: 8080
+
 mock-backend:
   enabled: true
   port: 8001
   path: moculus-bucket
 
 management:
+  port: 8081
   security:
     enabled: false
   endpoints:
